# fastapi-and-react

./: .gitignore  Makefile  README.md
.github/workflows/: backend.yml  frontend.yml
backend/: Makefile  database.db  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  services.py
backend/.github/workflows/: devops.yml
backend/app/: books.db  database.py  main.py  models.py
backend/app/database/: database.py
backend/app/model/: model.py
backend/app/schema/: schema.py
backend/app/service/: service.py
backend/auth/: jwt_bearer.py  jwt_handler.py
frontend/: package-lock.json
frontend/.github/workflows/: devops.yml
frontend/src/: App.jsx  main.jsx
frontend/src/components/LoginSignup/: LoginSignup.jsx
frontend/src/components/pages/: ProfilePage.jsx  ProfilesPage.jsx
