[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
bcrypt = "^4.1.2"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.2"
black = "^24.2.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pylint = "^3.1.0"
sqlalchemy = "^2.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"